--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
-.header {
+header {
     color: royalblue;
     background-color: orange;
-    font-size: 3rem;
+    font-size: 4rem;
+    font-weight: 600;
 }
